<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="setting_input">Input</string>
    <string name="setting_keyboard">Keyboard</string>
    <string name="setting_dictionary">Dictionary</string>
    <string name="setting_other">Others</string>
    <string name="setting_intelligent_correction_title">Intelligent correction</string>
    <string name="setting_intelligent_correction_summary">Intelligently correct mistyped words</string>
    <string name="setting_prediction_english_title">English prediction</string>
    <string name="setting_spell_correction_title">Auto spell correction</string>
    <string name="setting_spell_correction_summary">Automatically correct mistyped words</string>
    <string name="setting_auto_capitalization_title">Auto capitalization</string>
    <string name="setting_auto_capitalization_summary">Capitalize the first word of each sentence</string>
    <string name="setting_auto_space_smart_punctuation_title">Auto space insertion</string>
    <string name="setting_auto_space_smart_punctuation_summary">Automatically insert space between words</string>
    <string name="setting_gesture_input_title">Gesture typing</string>
    <string name="setting_gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="setting_gesture_input_preview_title">Dynamic suggestion preview</string>
    <string name="setting_gesture_input_preview_summary">Show the suggested word while gesturing</string>
    <string name="setting_gesture_auto_commit_title">Auto commit gesture input</string>
    <string name="setting_gesture_auto_commit_summary">Auto commit the current composing text before the next gesture input</string>
    <string name="setting_send_feedback_title">Send feedback</string>
    <string name="setting_license_title">Open source licenses</string>
    <string name="setting_license_summary">License details for open source software</string>
    <string name="setting_tutorial_title">Usage tips</string>
    <string name="setting_double_space_period_title">Double-space period</string>
    <string name="space_key_content_desc">Space</string>
    <string name="hide_keyboard_key_content_desc">Hide keyboard</string>
    <string name="setting_key_content_desc">Settings</string>
    <string name="symbol_keyboard_key_content_desc">Symbol keyboard</string>
    <string name="digit_keyboard_key_content_desc">Digit keyboard</string>
    <string name="smiley_keyboard_key_content_desc">Smiley keyboard</string>
    <string name="recent_keyboard_key_content_desc">Recent keyboard</string>
    <string name="dark_theme_content_desc">Material dark theme</string>
    <string name="light_theme_content_desc">Material light theme</string>
    <string name="voice_input_key_content_desc">Voice input</string>
    <string name="symbol_love_content_desc">General</string>
    <string name="symbol_kuohao_content_desc">Brackets</string>
    <string name="symbol_arrow_content_desc">Arrows</string>
    <string name="symbol_math_content_desc">Mathematics</string>
    <string name="symbol_number_content_desc">Numbers</string>
    <string name="smiley_emoji_content_desc">People</string>
    <string name="smiley_crown_content_desc">Objects</string>
    <string name="smiley_flower_content_desc">Nature</string>
    <string name="smiley_car_content_desc">Places</string>
    <string name="smiley_emoticon_content_desc">Emoticons</string>
    <string name="setting_privacy_title">Privacy policy</string>
    <string name="setting_tos_title">Terms of service</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_version_title">Current version</string>
    <string name="tutorial_theme_title">Select theme</string>
    <string name="pref_key_english_prediction">enable_english_prediction</string>
    <string name="pref_key_spell_correction">enable_spell_correction</string>
    <string name="pref_key_auto_capitalization">enable_auto_capitalization</string>
    <string name="pref_key_auto_space_smart_punctuation">enable_auto_space_smart_punctuation</string>
    <string name="pref_key_enable_spatial_model">enable_spatial_model</string>
    <string name="pref_key_enable_double_space_period">enable_double_space_period</string>
    <string name="privacy_url">http://www.google.com/policies/privacy/</string>
    <string name="tos_url">http://www.google.com/policies/terms/</string>
    <string name="setting_about_key">setting_about_key</string>
    <string name="setting_input_key">setting_input_key</string>
    <string name="setting_english_input_key">setting_english_input_key</string>
    <string name="setting_handwriting_input">Handwriting</string>
    <string name="label_space_handwriting">手写</string>
    <string name="punctuation_comma">，</string>
    <string name="punctuation_question">？</string>
    <string name="punctuation_exclamation">！</string>
    <string name="punctuation_sentence">。</string>
    <string name="punctuation_colon">：</string>
    <string name="punctuation_semicolon">；</string>
    <string name="punctuation_caesura">、</string>
    <string name="pref_key_enable_gesture_input">enable_gesture_input</string>
    <string name="pref_key_enable_incremental_gesture_input">enable_incremental_gesture_input</string>
    <string name="pref_key_enable_gesture_auto_commit">enable_gesture_auto_commit</string>
    <string name="setting_prediction_chinese_title">Chinese prediction</string>
    <string name="setting_prediction_chinese_summary">Use previous word to make suggestions</string>
    <string name="setting_tradition_title">Traditional Chinese</string>
    <string name="setting_chinese_english_mixed_input_title">Suggest English words</string>
    <string name="setting_chinese_english_mixed_input_summary">Suggest popular English words when inputting Pinyin</string>
    <string name="setting_chinese_input">Chinese input</string>
    <string name="setting_english_input">English input</string>
    <string name="setting_double_space_period_summary_cn">Double tap on spacebar inserts a period</string>
    <string name="pref_key_chinese_english_mixed_input">chinese_english_mixed_input</string>
    <string name="pref_key_chinese_prediction">enable_chinese_prediction</string>
    <string name="pref_key_enable_sc_tc_conversion">enable_sc_tc_conversion</string>
    <string name="setting_pinyin_scheme_title">Pinyin scheme</string>
    <string name="setting_fuzzy_pinyin_title">Fuzzy Pinyin</string>
    <string name="setting_fuzzy_pinyin_detail_title">Fuzzy Pinyin settings</string>
    <string name="pref_key_fuzzy_pinyin">fuzzy_pinyin</string>
    <string name="pref_key_fuzzy_pinyin_z_zh">fuzzy_pinyin_z_zh</string>
    <string name="pref_key_fuzzy_pinyin_c_ch">fuzzy_pinyin_c_ch</string>
    <string name="pref_key_fuzzy_pinyin_s_sh">fuzzy_pinyin_s_sh</string>
    <string name="pref_key_fuzzy_pinyin_an_ang">fuzzy_pinyin_an_ang</string>
    <string name="pref_key_fuzzy_pinyin_en_eng">fuzzy_pinyin_en_eng</string>
    <string name="pref_key_fuzzy_pinyin_in_ing">fuzzy_pinyin_in_ing</string>
    <string name="pref_key_fuzzy_pinyin_l_n">fuzzy_pinyin_l_n</string>
    <string name="pref_key_fuzzy_pinyin_f_h">fuzzy_pinyin_f_h</string>
    <string name="pref_key_fuzzy_pinyin_r_l">fuzzy_pinyin_r_l</string>
    <string name="pref_key_fuzzy_pinyin_k_g">fuzzy_pinyin_k_g</string>
    <string name="pref_key_fuzzy_pinyin_ian_iang">fuzzy_pinyin_ian_iang</string>
    <string name="pref_key_fuzzy_pinyin_uan_uang">fuzzy_pinyin_uan_uang</string>
    <string name="pref_key_pinyin_scheme">pinyin_scheme</string>
    <string name="pref_def_value_pinyin_scheme">quanpin</string>
    <string name="setting_fuzzy_pinyin_option_z_zh">z = zh</string>
    <string name="setting_fuzzy_pinyin_option_c_ch">c = ch</string>
    <string name="setting_fuzzy_pinyin_option_s_sh">s = sh</string>
    <string name="setting_fuzzy_pinyin_option_an_ang">an = ang</string>
    <string name="setting_fuzzy_pinyin_option_en_eng">en = eng</string>
    <string name="setting_fuzzy_pinyin_option_in_ing">in = ing</string>
    <string name="setting_fuzzy_pinyin_option_l_n">l = n</string>
    <string name="setting_fuzzy_pinyin_option_f_h">f = h</string>
    <string name="setting_fuzzy_pinyin_option_r_l">r = l</string>
    <string name="setting_fuzzy_pinyin_option_k_g">k = g</string>
    <string name="setting_fuzzy_pinyin_option_ian_iang">ian = iang</string>
    <string name="setting_fuzzy_pinyin_option_uan_uang">uan = uang</string>
</resources>