<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/setting_input" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_input" />
    </header>
    <header android:title="@string/setting_keyboard" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_keyboard" />
    </header>
    <header android:title="@string/setting_handwriting_input" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_handwriting_input" />
    </header>
    <header android:title="@string/setting_dictionary" android:fragment="com.google.android.apps.inputmethod.pinyin.preference.DictionarySettingsFragment" />
    <header android:title="@string/setting_other" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_other" />
    </header>
    <header android:title="@string/setting_send_feedback_title">
        <intent android:action="com.google.android.inputmethod.pinyin.USER_FEEDBACK" />
    </header>
    <header android:title="@string/setting_tutorial_title">
        <intent android:action="com.google.android.inputmethod.pinyin.FIRST_RUN" />
    </header>
    <header android:title="@string/setting_about_title" android:fragment="com.google.android.apps.inputmethod.libs.framework.preference.CommonPreferenceFragment">
        <extra android:name="PREFERENCE_FRAGMENT" android:value="setting_about" />
    </header>
</preference-headers>