<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey_template id="@+id/softkey_template_punctuation_handwriting" layout="@layout/softkey_handwriting_label">
            <action type="PRESS" data="$text$" keycode="PLAIN_TEXT" intention="COMMIT" />
            <label location="@id/label" value="$text$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_punctuation_handwriting">
            <softkey id="@id/softkey_question" text="@string/punctuation_question" />
            <softkey id="@id/softkey_exclamation" text="@string/punctuation_exclamation" />
            <softkey id="@id/softkey_comma" text="@string/punctuation_comma" />
            <softkey id="@id/softkey_sentence" text="@string/punctuation_sentence" />
            <softkey id="@id/softkey_wave" text="~" />
            <softkey id="@id/softkey_colon" text="@string/punctuation_colon" />
            <softkey id="@id/softkey_slash" text="/" />
            <softkey id="@id/softkey_quoatation" text="&quot;" />
            <softkey id="@id/softkey_caesura" text="@string/punctuation_caesura" />
            <softkey id="@id/softkey_danda" text="।" />
            <softkey id="@id/softkey_single_quotation" text="'" />
            <softkey id="@id/softkey_minus" text="-" />
            <softkey id="@id/softkey_middle_dot" text="·" />
            <softkey id="@id/softkey_semicolon" text="@string/punctuation_semicolon" />
            <softkey id="@id/softkey_at" text="\@" />
            <softkey id="@id/softkey_period" text="." />
        </softkey_list>
    </softkeys>
</framework>