<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey_template id="@+id/softkey_template_sub_category_active" layout="@layout/softkey_non_prime_sub_category_icon_active" alpha="@attr/IconCategoryActive" content_description="$desc$">
            <action type="PRESS" keycode="UNKNOWN" />
            <icon location="@id/icon" value="$param_icon$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_sub_category_active">
            <softkey id="@id/softkey_non_prime_symbol_sub_category_1_active" param_icon="@attr/IconSubCategorySymbolLove" desc="@string/symbol_love_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_2_active" param_icon="@attr/IconSubCategorySymbolKuohao" desc="@string/symbol_kuohao_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_3_active" param_icon="@attr/IconSubCategorySymbolArrow" desc="@string/symbol_arrow_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_4_active" param_icon="@attr/IconSubCategorySymbolMath" desc="@string/symbol_math_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_5_active" param_icon="@attr/IconSubCategorySymbolNumber" desc="@string/symbol_number_content_desc" />
        </softkey_list>
        <softkey_template id="@+id/softkey_template_sub_category_deactive" layout="@layout/softkey_non_prime_sub_category_icon_deactive" alpha="@attr/IconCategoryInactive" content_description="$desc$">
            <action type="PRESS" keycode="SWITCH_SUB_CATEGORY" data="$param_data$" />
            <icon location="@id/icon" value="$param_icon$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_sub_category_deactive">
            <softkey id="@id/softkey_non_prime_symbol_sub_category_1_deactive" param_icon="@attr/IconSubCategorySymbolLove" param_data="SUB_CATEGORY_1" desc="@string/symbol_love_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_2_deactive" param_icon="@attr/IconSubCategorySymbolKuohao" param_data="SUB_CATEGORY_2" desc="@string/symbol_kuohao_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_3_deactive" param_icon="@attr/IconSubCategorySymbolArrow" param_data="SUB_CATEGORY_3" desc="@string/symbol_arrow_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_4_deactive" param_icon="@attr/IconSubCategorySymbolMath" param_data="SUB_CATEGORY_4" desc="@string/symbol_math_content_desc" />
            <softkey id="@id/softkey_non_prime_symbol_sub_category_5_deactive" param_icon="@attr/IconSubCategorySymbolNumber" param_data="SUB_CATEGORY_5" desc="@string/symbol_number_content_desc" />
        </softkey_list>
    </softkeys>
</framework>