<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey_template id="@+id/softkey_template_sub_category_active" layout="@layout/softkey_non_prime_sub_category_icon_active" alpha="@attr/IconCategoryActive" content_description="$desc$">
            <action type="PRESS" keycode="UNKNOWN" />
            <icon location="@id/icon" value="$param_icon$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_sub_category_active">
            <softkey id="@id/softkey_non_prime_smiley_sub_category_1_active" param_icon="@attr/IconSubCategorySmileyEmoji" desc="@string/smiley_emoji_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_2_active" param_icon="@attr/IconSubCategorySmileyCrown" desc="@string/smiley_crown_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_3_active" param_icon="@attr/IconSubCategorySmileyFlower" desc="@string/smiley_flower_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_4_active" param_icon="@attr/IconSubCategorySmileyCar" desc="@string/smiley_car_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_5_active" param_icon="@attr/IconSubCategorySmileyEmoticon" desc="@string/smiley_emoticon_content_desc" />
        </softkey_list>
        <softkey_template id="@+id/softkey_template_sub_category_deactive" layout="@layout/softkey_non_prime_sub_category_icon_deactive" alpha="@attr/IconCategoryInactive" content_description="$desc$">
            <action type="PRESS" keycode="SWITCH_SUB_CATEGORY" data="$param_data$" />
            <icon location="@id/icon" value="$param_icon$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_sub_category_deactive">
            <softkey id="@id/softkey_non_prime_smiley_sub_category_1_deactive" param_icon="@attr/IconSubCategorySmileyEmoji" param_data="SUB_CATEGORY_1" desc="@string/smiley_emoji_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_2_deactive" param_icon="@attr/IconSubCategorySmileyCrown" param_data="SUB_CATEGORY_2" desc="@string/smiley_crown_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_3_deactive" param_icon="@attr/IconSubCategorySmileyFlower" param_data="SUB_CATEGORY_3" desc="@string/smiley_flower_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_4_deactive" param_icon="@attr/IconSubCategorySmileyCar" param_data="SUB_CATEGORY_4" desc="@string/smiley_car_content_desc" />
            <softkey id="@id/softkey_non_prime_smiley_sub_category_5_deactive" param_icon="@attr/IconSubCategorySmileyEmoticon" param_data="SUB_CATEGORY_5" desc="@string/smiley_emoticon_content_desc" />
        </softkey_list>
    </softkeys>
</framework>