<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey id="@id/softkey_switch_to_fullscreen" layout="@layout/softkey_icon" alpha="@attr/IconAlpha">
            <action type="PRESS" keycode="TOGGLE_FULLSCREEN_HANDWRITING" />
            <icon location="@id/icon" value="@attr/IconSwitchToFullScreenHWR" />
        </softkey>
        <softkey id="@id/softkey_switch_to_halfscreen" layout="@layout/softkey_icon" alpha="@attr/IconAlpha">
            <action type="PRESS" keycode="TOGGLE_FULLSCREEN_HANDWRITING" />
            <icon location="@id/icon" value="@attr/IconSwitchToHalfScreenHWR" />
        </softkey>
        <softkey id="@id/softkey_fullscreen_handwriting_space" layout="@layout/softkey_handwriting_space" multi_touch="true" content_description="@string/space_key_content_desc">
            <action type="PRESS" keycode="SPACE" data=" " />
            <action type="LONG_PRESS" keycode="SHOW_SYSTEM_IME_PICKER" action_on_down="true" />
            <icon location="@id/icon" value="@attr/IconLongSpace" />
            <label location="@id/label" value="@string/label_space_handwriting" />
        </softkey>
        <softkey id="@id/softkey_handwriting_switch_to_non_prime" layout="@layout/softkey_function_key_label_lightkey" content_description="@string/symbol_keyboard_key_content_desc">
            <action type="PRESS" keycode="SWITCH_TO_NON_PRIME_KEYBOARD" data="symbol" />
            <label location="@id/label" value="\?123" />
        </softkey>
    </softkeys>
</framework>